<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/customer_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:background="@drawable/v5_0_1_flipper_head_blue_background"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/change_password_back"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:src="@drawable/v5_0_1_flipper_head_flip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_line_separator"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/change_password_back"
            android:background="@drawable/v5_0_1_flipper_head_separator" />

        <TextView
            android:id="@+id/registerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/checkPassword"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="40.0dip"
        android:background="@drawable/customer_queryprice_table"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/change_password_old"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:hint="@string/change_password_old_text"
            android:password="true"
            android:textColor="@drawable/blue"
            android:textSize="18sp" 
            />

        <EditText
            android:id="@+id/change_password_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/change_password_new_text"
            android:password="true"
            android:textColor="@drawable/blue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/change_password_new_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/change_password_new_two_text"
            android:password="true"
            android:textColor="@drawable/blue"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="30.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sureBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/sendrequest_btn"
            android:text="@string/sureBtn_text"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/hanguprequest_btn"
            android:text="@string/cancelBtn_text"
            android:textColor="#ffffff"
            android:textSize="16sp" 
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

</LinearLayout>