<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/customer_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:background="@drawable/v5_0_1_flipper_head_blue_background"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/more_btn_back"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:src="@drawable/v5_0_1_flipper_head_flip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_line_separator"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/more_btn_back"
            android:background="@drawable/v5_0_1_flipper_head_separator" />

        <TextView
            android:id="@+id/registerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/more_text"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/more_table"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/yewuinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/yewuinfo_text"
                android:textColor="#646464"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/lease_list_item_arraw_unsp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/customer_driverorder_details_line" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/help_text"
                android:textColor="#646464"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/lease_list_item_arraw_unsp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/customer_driverorder_details_line" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/update_text"
                android:textColor="#646464"
                android:textSize="18sp" />
            
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="2dp"
                android:src="@drawable/lease_list_item_arraw_unsp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/update"
                android:layout_toLeftOf="@id/imageView3">

                <TextView
                    android:id="@+id/current_version_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/current_version_label_text"
                    android:textColor="#646464"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/current_version_text"
                    android:textColor="#646464"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allright"
            android:textSize="13sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textColor="#646464"
            android:layout_centerHorizontal="true"/>
        <TextView 
            android:id="@+id/textView2" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="13sp"
            android:layout_above="@id/textView1"
            android:layout_centerHorizontal="true"
            android:textColor="#646464"/>
        <TextView 
            android:id="@+id/textView3" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shanghai"
            android:textSize="13sp"
            android:layout_above="@id/textView2"
            android:textColor="#646464"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    

</LinearLayout>