<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/customer_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:background="@drawable/v5_0_1_flipper_head_blue_background"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/login_btn_back"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:src="@drawable/v5_0_1_flipper_head_flip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_line_separator"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/login_btn_back"
            android:background="@drawable/v5_0_1_flipper_head_separator" />

        <TextView
            android:id="@+id/registerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/userlogin"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dip"
        android:src="@drawable/tlj_logo" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="8dip"
        android:background="@drawable/cell_first" >

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/login_user"
            android:drawablePadding="10dip"
            android:hint="请输入账号"
            android:maxLength="11"
            android:inputType="phone"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textColor="#ff98bede" />

        <Button
            android:id="@+id/btn_clear_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_clear_text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/cell_bottom" >

        <EditText
            android:id="@+id/pwdEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/login_pwd"
            android:drawablePadding="10dip"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:textColor="#ff98bede" />

        <Button
            android:id="@+id/btn_clear_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_clear_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/choose_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dip" >

        <CheckBox
            android:id="@+id/infoway_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:button="@drawable/check_box"
            android:text="@string/auto_login"
            android:textColor="#696969" />

        <CheckBox
            android:id="@+id/infoway_savepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/check_box"
            android:text="@string/save_pwd"
            android:textColor="#696969" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="25dip"
        android:background="@drawable/login_btn" />

</LinearLayout>